--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "bootstrap-affix": "^1.0.1",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-router-dom": "^6.0.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
